--- a/Angular/src/app/pages/login/login.component.html
+++ b/Angular/src/app/pages/login/login.component.html
@@ -2,39 +2,49 @@
   <div class="container">
     <div class="login-image"></div> <!-- This div will display the image covering the entire left side -->
     <div class="login-content"> <!-- This div contains the login form on the right side -->
-      <form [formGroup]="loginForm" (ngSubmit)="onLogin()"> <!-- Changed to onLogin to use the updated method -->
-        <mat-card class="login-box">
-          <mat-card-header>
-            <img mat-card-avatar [src]="logoUrl" alt="Logo">
-          </mat-card-header>
-          <mat-card-content>
-            <mat-form-field appearance="outline">
-              <mat-label>Email</mat-label>
-              <input matInput placeholder="Enter your email" formControlName="email" required>
-              <mat-error *ngIf="loginForm.get('email')?.hasError('required')">Email is required</mat-error>
-              <mat-error *ngIf="loginForm.get('email')?.hasError('email')">Invalid email format</mat-error>
-            </mat-form-field>
-
-            <mat-form-field appearance="outline">
-              <mat-label>Password</mat-label>
-              <input matInput type="password" placeholder="Enter your password" formControlName="password" required>
-              <mat-error *ngIf="loginForm.get('password')?.hasError('required')">Password is required</mat-error>
-              <mat-error *ngIf="loginForm.get('password')?.hasError('minlength')">Password must be at least 6 characters
-                long</mat-error>
-            </mat-form-field>
-          </mat-card-content>
-          <mat-card-actions>
-            <button mat-raised-button class="cancel-button" routerLink="/home">Cancel</button>
-            <button mat-raised-button class="login-button">Login</button>
-          </mat-card-actions>
-
-
-        </mat-card>
+      <form class="space-y-6" (ngSubmit)="login()">
+        <div>
+          <label for="username" class="block text-sm font-medium text-gray-700"
+            >Email</label
+          >
+          <input
+            type="text"
+            id="email"
+            name="email"
+            [(ngModel)]="email"
+            class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+            placeholder="Enter your email"
+            required
+          />
+        </div>
+        <div class="relative">
+          <label for="password" class="block text-sm font-medium text-gray-700"
+            >Password</label
+          >
+          <input
+            [type]="showPassword ? 'text' : 'password'"
+            id="password"
+            name="password"
+            [(ngModel)]="password"
+            class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+            placeholder="Enter your password"
+            required
+          />
+          <button
+            type="button"
+            (click)="togglePasswordVisibility()"
+            class="absolute inset-y-0 right-0 pr-3 pt-5 flex items-center justify-center text-gray-500 hover:text-gray-700 h-full"
+          >
+            <i class="{{ showPassword ? 'fas fa-eye-slash' : 'fas fa-eye' }}"></i>
+          </button>
+        </div>
+        <button
+          type="submit"
+          class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+        >
+          Login
+        </button>
       </form>
-      <!-- Status message display -->
-      <div *ngIf="statusMessage" class="status-message">
-        {{ statusMessage }}
-      </div>
     </div>
   </div>
 </div>
