--- a/Angular/src/app/pages/create-building/create-building.component.html
+++ b/Angular/src/app/pages/create-building/create-building.component.html
@@ -1,1 +1,67 @@
-<p>create-building works!</p>
+<div>
+    <h2>Create Building</h2>
+    <form (ngSubmit)="createBuilding()">
+      <div>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" [(ngModel)]="name">
+      </div>
+      <div>
+        <label for="address">Address:</label>
+        <input type="text" id="address" name="address" [(ngModel)]="address">
+      </div>
+      <div>
+        <label for="latitude">Latitude:</label>
+        <input type="number" id="latitude" name="latitude" [(ngModel)]="latitude">
+      </div>
+      <div>
+        <label for="longitude">Longitude:</label>
+        <input type="number" id="longitude" name="longitude" [(ngModel)]="longitude">
+      </div>
+      <div>
+        <label for="commonExpenses">Common Expenses:</label>
+        <input type="number" id="commonExpenses" name="commonExpenses" [(ngModel)]="commonExpenses">
+      </div>
+      <button type="submit">Create</button>
+    </form>
+  </div>
+
+
+  <div *ngIf="buildings.length > 0; else loading">
+    <h2>Buildings</h2>
+    <ul>
+      <li *ngFor="let building of buildings">
+        <p>Manager name: {{ building.managerName }}</p>
+        <p>Name: {{ building.name }}</p>
+        <p>Address: {{ building.address }}</p>
+        <p>Latitude: {{ building.latitude }}</p>
+        <p>Longitude: {{ building.longitude }}</p>
+        <p>Construction company: {{ building.constructionCompany }}</p>
+        <p>Common expenses: {{ building.commonExpenses }}</p>
+      </li>
+    </ul>
+  </div>
+  
+  <ng-template #loading>
+    <p>Loading buildings...</p>
+  </ng-template>
+
+
+
+  <div>
+    <h2>Modify Building Manager</h2>
+    <form (ngSubmit)="modifyManager(selectedManagerId, selectedBuildingId)">
+      <div>
+        <label for="selectedBuilding">Select Building:</label>
+        <select id="selectedBuilding" name="selectedBuilding" [(ngModel)]="selectedBuildingId">
+          <option *ngFor="let building of buildings" [value]="building.id">{{ building.name }}</option>
+        </select>
+      </div>
+      <div>
+        <label for="selectedManager">Select Manager:</label>
+        <select id="selectedManager" name="selectedManager" [(ngModel)]="selectedManagerId">
+          <option *ngFor="let manager of managers" [value]="manager.id">{{ manager.email }}</option>
+        </select>
+      </div>
+      <button type="submit">Change Manager</button>
+    </form>
+  </div>
